# wagtail-menu-redowl

./: .gitignore  LICENSE  README.md  pyproject.toml
wagtail_menu/: __init__.py  apps.py  forms.py  models.py  views.py  wagtail_hooks.py
wagtail_menu/migrations/: 0001_initial.py
wagtail_menu/static/site_menu/css/: menu.css
wagtail_menu/templates/site_menu/: menu.html  menu_item.html
wagtail_menu/templates/site_menu/admin/: menu_delete.html  menu_edit.html  menu_form.html  menu_index.html  menu_item_delete.html  menu_item_form.html  menu_item_row.html
wagtail_menu/templatetags/: menu_tags.py
