[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wagtail-menu"
version = "1.0.0"
description = "Гибкое древовидное меню для Wagtail CMS — аналог меню WordPress"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
maintainers = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = [
    "wagtail",
    "django",
    "menu",
    "navigation",
    "cms",
    "treeview",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 6.0",
    "Framework :: Wagtail",
    "Framework :: Wagtail :: 7",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
requires-python = ">=3.10"
dependencies = [
    "Django>=6.0",
    "Wagtail>=7.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-django>=4.5",
    "black>=23.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/wagtail-menu"
Documentation = "https://github.com/yourusername/wagtail-menu#readme"
Repository = "https://github.com/yourusername/wagtail-menu.git"
Issues = "https://github.com/yourusername/wagtail-menu/issues"
Changelog = "https://github.com/yourusername/wagtail-menu/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = ["wagtail_menu"]

[tool.setuptools.package-data]
wagtail_menu = [
    "templates/**/*.html",
    "static/**/*.css",
    "static/**/*.js",
    "locale/**/*.mo",
    "locale/**/*.po",
]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "-v --tb=short"
